[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/screens/HomeImproved.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/WeeklyBar.gd" id="2"]
[ext_resource type="Script" path="res://scripts/components/HexagonChart.gd" id="3"]
[ext_resource type="Theme" path="res://themes/MobileTheme.tres" id="4"]

[node name="HomeImproved" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("4")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.07, 0.07, 0.1, 1)

[node name="WeeklyBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 120)
anchor_right = 1.0
offset_bottom = 120.0
script = ExtResource("2")

[node name="Content" type="HBoxContainer" parent="WeeklyBar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
theme_override_constants/separation = 20

[node name="WeekInfo" type="VBoxContainer" parent="WeeklyBar/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeekLabel" type="Label" parent="WeeklyBar/Content/WeekInfo"]
text = "1ÌïôÎÖÑ Î¥ÑÌïôÍ∏∞"
theme_override_font_sizes/font_size = 32

[node name="WeekProgress" type="HBoxContainer" parent="WeeklyBar/Content/WeekInfo"]

[node name="Label" type="Label" parent="WeeklyBar/Content/WeekInfo/WeekProgress"]
text = "Week "
theme_override_font_sizes/font_size = 24

[node name="Current" type="Label" parent="WeeklyBar/Content/WeekInfo/WeekProgress"]
text = "1"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.84, 0, 1)

[node name="Separator" type="Label" parent="WeeklyBar/Content/WeekInfo/WeekProgress"]
text = " / "
theme_override_font_sizes/font_size = 24

[node name="Total" type="Label" parent="WeeklyBar/Content/WeekInfo/WeekProgress"]
text = "156"
theme_override_font_sizes/font_size = 24

[node name="TermIndicator" type="VBoxContainer" parent="WeeklyBar/Content"]

[node name="TermLabel" type="Label" parent="WeeklyBar/Content/TermIndicator"]
text = "üìö ÌïôÍ∏∞Ï§ë"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="NextMatch" type="Label" parent="WeeklyBar/Content/TermIndicator"]
text = "Îã§Ïùå Í≤ΩÍ∏∞: 3Ïùº ÌõÑ"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 120.0
offset_bottom = -100.0

[node name="MainContent" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1080, 0)
theme_override_constants/separation = 20

[node name="TopSection" type="HBoxContainer" parent="ScrollContainer/MainContent"]
custom_minimum_size = Vector2(0, 400)
theme_override_constants/separation = 20

[node name="PlayerCard" type="Panel" parent="ScrollContainer/MainContent/TopSection"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="PlayerHeader" type="HBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox"]

[node name="PlayerIcon" type="Panel" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader"]
custom_minimum_size = Vector2(80, 80)

[node name="PlayerInfo" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="Name" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader/PlayerInfo"]
text = "ÌîåÎ†àÏù¥Ïñ¥ Ïù¥Î¶Ñ"
theme_override_font_sizes/font_size = 28

[node name="Position" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader/PlayerInfo"]
text = "ST (Ïä§Ìä∏ÎùºÏù¥Ïª§)"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="Academy" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader/PlayerInfo"]
text = "Í∞ïÎÇ® ÏïÑÏπ¥Îç∞ÎØ∏"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox"]

[node name="ConditionSection" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox"]
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection"]
text = "Ïª®ÎîîÏÖò"
theme_override_font_sizes/font_size = 20

[node name="ConditionBar" type="HBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection"]

[node name="Emoji" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection/ConditionBar"]
text = "üòÑ"
theme_override_font_sizes/font_size = 48

[node name="ConditionInfo" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection/ConditionBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConditionText" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection/ConditionBar/ConditionInfo"]
text = "ÏµúÏÉÅ"
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)

[node name="ConditionValue" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/ConditionSection/ConditionBar/ConditionInfo"]
text = "Ïª®ÎîîÏÖò 5/5"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox"]

[node name="StatsOverview" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox"]
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview"]
text = "Îä•Î†• ÏöîÏïΩ"
theme_override_font_sizes/font_size = 20

[node name="OVR" type="HBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview"]

[node name="Label" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview/OVR"]
text = "OVR"
theme_override_font_sizes/font_size = 24

[node name="Value" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview/OVR"]
layout_mode = 2
size_flags_horizontal = 3
text = "65"
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
horizontal_alignment = 2

[node name="FatigueBar" type="VBoxContainer" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview"]

[node name="Label" type="Label" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview/FatigueBar"]
text = "ÌîºÎ°úÎèÑ"
theme_override_font_sizes/font_size = 18

[node name="ProgressBar" type="ProgressBar" parent="ScrollContainer/MainContent/TopSection/PlayerCard/VBox/StatsOverview/FatigueBar"]
custom_minimum_size = Vector2(0, 30)
value = 30.0
show_percentage = false

[node name="HexagonChart" type="Control" parent="ScrollContainer/MainContent/TopSection"]
custom_minimum_size = Vector2(520, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("3")
chart_size = 180.0

[node name="WeeklySchedule" type="Panel" parent="ScrollContainer/MainContent"]
custom_minimum_size = Vector2(0, 180)

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox"]
text = "Ï£ºÍ∞Ñ ÏùºÏ†ï"
theme_override_font_sizes/font_size = 24

[node name="DaysContainer" type="HBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Monday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Monday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Monday/VBox"]
text = "Ïõî"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Monday/VBox"]
text = "üèÉ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Monday/VBox"]
text = "ÌõàÎ†®"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Tuesday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Tuesday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Tuesday/VBox"]
text = "Ìôî"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Tuesday/VBox"]
text = "üèÉ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Tuesday/VBox"]
text = "ÌõàÎ†®"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Wednesday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Wednesday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Wednesday/VBox"]
text = "Ïàò"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Wednesday/VBox"]
text = "‚öΩ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Wednesday/VBox"]
text = "Í≤ΩÍ∏∞"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
horizontal_alignment = 1

[node name="Thursday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Thursday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Thursday/VBox"]
text = "Î™©"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Thursday/VBox"]
text = "üèÉ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Thursday/VBox"]
text = "ÌõàÎ†®"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Friday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Friday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Friday/VBox"]
text = "Í∏à"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Friday/VBox"]
text = "üèÉ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Friday/VBox"]
text = "ÌõàÎ†®"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Saturday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Saturday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Saturday/VBox"]
text = "ÌÜ†"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Saturday/VBox"]
text = "üò¥"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Saturday/VBox"]
text = "Ìú¥Ïãù"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Sunday" type="Panel" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Sunday"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Day" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Sunday/VBox"]
text = "Ïùº"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
horizontal_alignment = 1

[node name="Activity" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Sunday/VBox"]
text = "üéÆ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="Type" type="Label" parent="ScrollContainer/MainContent/WeeklySchedule/VBox/DaysContainer/Sunday/VBox"]
text = "ÏûêÏú†"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="QuickActions" type="Panel" parent="ScrollContainer/MainContent"]
custom_minimum_size = Vector2(0, 240)

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/MainContent/QuickActions"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="ScrollContainer/MainContent/QuickActions/VBox"]
text = "ÌôúÎèô ÏÑ†ÌÉù"
theme_override_font_sizes/font_size = 24

[node name="TeamTrainingSection" type="VBoxContainer" parent="ScrollContainer/MainContent/QuickActions/VBox"]
layout_mode = 2

[node name="TeamLabel" type="Label" parent="ScrollContainer/MainContent/QuickActions/VBox/TeamTrainingSection"]
text = "ÌåÄ ÌôúÎèô (ÏùòÎ¨¥)"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.84, 0, 1)

[node name="TeamButtons" type="HBoxContainer" parent="ScrollContainer/MainContent/QuickActions/VBox/TeamTrainingSection"]
layout_mode = 2
theme_override_constants/separation = 20


[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MainContent/QuickActions/VBox"]
layout_mode = 2

[node name="PersonalLabel" type="Label" parent="ScrollContainer/MainContent/QuickActions/VBox"]
text = "Í∞úÏù∏ ÌôúÎèô"
theme_override_font_sizes/font_size = 20

[node name="Buttons" type="HBoxContainer" parent="ScrollContainer/MainContent/QuickActions/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TrainingButton" type="Button" parent="ScrollContainer/MainContent/QuickActions/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "üèãÔ∏è Í∞úÏù∏ ÌõàÎ†®"
theme_override_font_sizes/font_size = 20

[node name="RestButton" type="Button" parent="ScrollContainer/MainContent/QuickActions/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "üò¥ Ìú¥Ïãù"
theme_override_font_sizes/font_size = 20

[node name="GoOutButton" type="Button" parent="ScrollContainer/MainContent/QuickActions/VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "üéÆ Ïô∏Ï∂ú"
theme_override_font_sizes/font_size = 20

[node name="BottomBar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
custom_minimum_size = Vector2(0, 100)

[node name="ButtonContainer" type="HBoxContainer" parent="BottomBar"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
theme_override_constants/separation = 20

[node name="StatusButton" type="Button" parent="BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "üìä ÏÉÅÌÉú"
theme_override_font_sizes/font_size = 20

[node name="MatchHistoryButton" type="Button" parent="BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "‚öΩ Í≤ΩÍ∏∞ Í∏∞Î°ù"
theme_override_font_sizes/font_size = 20

[node name="AdvanceButton" type="Button" parent="BottomBar/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "‚ñ∂Ô∏è ÏßÑÌñâ"
theme_override_font_sizes/font_size = 20

[node name="SaveButton" type="Button" parent="BottomBar/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 60)
text = "üíæ"
theme_override_font_sizes/font_size = 20