extends Control
# HomeImproved - ê°œì„ ëœ í™ˆ í™”ë©´

# UI ìš”ì†Œë“¤ - ì‹¤ì œ ê²½ë¡œ ì‚¬ìš©
# í”Œë ˆì´ì–´ ì •ë³´ í‘œì‹œ
@onready
var player_name_label: Label = $ScrollContainer/MainContent/TopSection/PlayerCard/VBox/PlayerHeader/PlayerInfo/Name
@onready var week_info_label: Label = $WeeklyBar/Content/WeekInfo/WeekLabel

# Buttons - ì‹¤ì œ ê²½ë¡œ
@onready var training_button: Button = $"ScrollContainer/MainContent/QuickActions/VBox/Buttons/TrainingButton"
@onready var rest_button: Button = $"ScrollContainer/MainContent/QuickActions/VBox/Buttons/RestButton"
@onready var go_out_button: Button = $"ScrollContainer/MainContent/QuickActions/VBox/Buttons/GoOutButton"
@onready var status_button: Button = $"BottomBar/ButtonContainer/StatusButton"
@onready var advance_button: Button = $"BottomBar/ButtonContainer/AdvanceButton"
@onready var save_button: Button = $"BottomBar/ButtonContainer/SaveButton"
@onready var match_history_button: Button = $"BottomBar/ButtonContainer/MatchHistoryButton"
@onready var bottom_bar_container: Container = $"BottomBar/ButtonContainer"
@onready var quick_actions_container: Container = $"ScrollContainer/MainContent/QuickActions/VBox/Buttons"

# QuickBar support
var quickbar: QuickBar

# Event system support
var event_dialogue_screen: EventDialogueScreen = null

# Activity visual feedback
var activity_feedback: ActivityVisualFeedback = null


func _ready():
	print("==================================================")
	print("ğŸ ğŸ ğŸ  HOME SCREEN LOADED ğŸ ğŸ ğŸ ")
	print("==================================================")
	print("[HomeImproved] Initializing...")

	# @onready ë³€ìˆ˜ë“¤ í™•ì¸
	print("Player name label: ", player_name_label)
	print("Week info label: ", week_info_label)

	# ColorSystem ì ìš© (ì•ˆì „í•˜ê²Œ)
	# í˜„ì¬ëŠ” ì£¼ì„ì²˜ë¦¬ (static í•¨ìˆ˜ í˜¸ì¶œ ë°©ì‹ ìˆ˜ì • í•„ìš”)
	# SceneColorUpdater.apply_color_system_to_scene(self)
	print("SceneColorUpdater skipped - static call needed")

	# ë°˜ì‘í˜• ë ˆì´ì•„ì›ƒ ìˆ˜ì • (ì•ˆì „í•˜ê²Œ)
	# í˜„ì¬ëŠ” ì£¼ì„ì²˜ë¦¬ (static í•¨ìˆ˜ í˜¸ì¶œ ë°©ì‹ ìˆ˜ì • í•„ìš”)
	# ResponsiveLayoutFixer.fix_scene_layout(self)
	print("ResponsiveLayoutFixer skipped - static call needed")

	# í„°ì¹˜ í”¼ë“œë°± ì ìš© (ì•ˆì „í•˜ê²Œ)
	# í˜„ì¬ëŠ” ì£¼ì„ì²˜ë¦¬ (static í•¨ìˆ˜ í˜¸ì¶œ ë°©ì‹ ìˆ˜ì • í•„ìš”)
	# TouchFeedback.apply_to_all_buttons(self)
	print("TouchFeedback skipped - static call needed")

	# ë²„íŠ¼ ì—°ê²°
	_connect_buttons()

	# ë§¤ë‹ˆì € ì‹ í˜¸ ì—°ê²°
	if TrainingManager:
		TrainingManager.rest_activity_completed.connect(_on_rest_activity_completed)
		TrainingManager.go_out_activity_completed.connect(_on_go_out_activity_completed)
	if GameManager:
		GameManager.team_training_executed.connect(_on_team_training_executed)

	# QuickBar ì´ˆê¸°í™”
	_initialize_quickbar()

	# Event dialogue screen ì´ˆê¸°í™”
	_initialize_event_dialogue()

	# Activity feedback ì´ˆê¸°í™”
	_initialize_activity_feedback()

	# UI ì—…ë°ì´íŠ¸
	_update_ui()

	# Redirect MVP flows to WeekHub for the new loop
	if DateManager and DateManager.mvp_mode_enabled:
		call_deferred("_go_to_weekhub")


func _go_to_weekhub() -> void:
	var target_scene := "res://scenes/mvp/WeekHub.tscn"
	if is_inside_tree() and get_tree() != null:
		var result := get_tree().change_scene_to_file(target_scene)
		if result != OK:
			print("[HomeImproved] âŒ Failed to redirect to WeekHub (error %d)" % result)
	else:
		print("[HomeImproved] âŒ Cannot redirect to WeekHub â€“ tree unavailable")

	print("[HomeImproved] Initialization complete")


func _connect_buttons():
	print("[HomeImproved] Connecting buttons...")

	# MyTeamê³¼ ë©€í‹°í”Œë ˆì´ì–´ ë²„íŠ¼ ì¶”ê°€ (ë™ì  ìƒì„±)
	_add_new_buttons()

	# ëŒ€ì‹œë³´ë“œ ë²„íŠ¼ ì¶”ê°€
	_add_dashboard_button()

	# Phase 10: History ë²„íŠ¼ ì¶”ê°€
	_add_history_button()

	# ê°€ì±  ë²„íŠ¼ ì¶”ê°€
	_add_gacha_button()

	# ì „ìˆ  ë²„íŠ¼ ì¶”ê°€
	_add_tactics_button()

	# ì„¤ì • ë²„íŠ¼ ì¶”ê°€
	_add_settings_button()

	# ëª…ì˜ˆì˜ ì „ë‹¹ ë²„íŠ¼ ì¶”ê°€
	_add_hall_of_fame_button()

	var connected_count = 0

	# ë²„íŠ¼ ì—°ê²°
	if training_button:
		training_button.pressed.connect(_on_training_pressed)
		connected_count += 1

	if rest_button:
		rest_button.pressed.connect(_on_rest_pressed)
		connected_count += 1

	if go_out_button:
		go_out_button.pressed.connect(_on_go_out_pressed)
		connected_count += 1

	if status_button:
		status_button.pressed.connect(_on_status_pressed)
		connected_count += 1

	if advance_button:
		advance_button.pressed.connect(_on_advance_pressed)
		connected_count += 1

	if save_button:
		save_button.pressed.connect(_on_save_pressed)
		connected_count += 1

	if match_history_button:
		match_history_button.pressed.connect(_on_match_history_pressed)
		connected_count += 1

	print("Total buttons connected: ", connected_count)


func _add_dashboard_button():
	"""ëŒ€ì‹œë³´ë“œ ë²„íŠ¼ ì¶”ê°€"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for dashboard button")
		return

	var dashboard_btn = Button.new()
	dashboard_btn.text = "ğŸ  ëŒ€ì‹œë³´ë“œ"
	dashboard_btn.custom_minimum_size = Vector2(100, 60)
	dashboard_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	dashboard_btn.pressed.connect(_on_dashboard_pressed)

	# ë§¨ ì•ì— ì¶”ê°€
	bottom_bar_container.call_deferred("add_child", dashboard_btn)
	bottom_bar_container.call_deferred("move_child", dashboard_btn, 0)
	print("âœ… Dashboard button added")


func _on_dashboard_pressed():
	"""ëŒ€ì‹œë³´ë“œ í™”ë©´ìœ¼ë¡œ ì´ë™"""
	print("[HomeImproved] Dashboard button pressed")
	var scene_path = "res://scenes/screens/DashboardScreen.tscn"
	if ResourceLoader.exists(scene_path):
		get_tree().change_scene_to_file(scene_path)
	else:
		_show_notification("ëŒ€ì‹œë³´ë“œ í™”ë©´ ì¤€ë¹„ ì¤‘", Color(1, 0.8, 0.3, 1))


func _add_history_button():
	"""Phase 10: History ë²„íŠ¼ ì¶”ê°€"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for history button")
		return

	var history_btn = Button.new()
	history_btn.text = "ğŸ“Š ê¸°ë¡"
	history_btn.custom_minimum_size = Vector2(100, 60)
	history_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	history_btn.pressed.connect(_on_history_pressed)

	# Status ë²„íŠ¼ ë‹¤ìŒì— ì¶”ê°€
	var status_btn_index = -1
	for i in range(bottom_bar_container.get_child_count()):
		var child = bottom_bar_container.get_child(i)
		if "StatusButton" in child.name:
			status_btn_index = i
			break

	if status_btn_index >= 0:
		bottom_bar_container.call_deferred("add_child", history_btn)
		bottom_bar_container.call_deferred("move_child", history_btn, status_btn_index + 1)
	else:
		bottom_bar_container.call_deferred("add_child", history_btn)

	print("âœ… History button added")


func _add_gacha_button():
	"""ê°€ì±  ë²„íŠ¼ ì¶”ê°€"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for gacha button")
		return

	var gacha_btn = Button.new()
	gacha_btn.text = "ğŸ² ê°€ì± "
	gacha_btn.custom_minimum_size = Vector2(100, 60)
	gacha_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	gacha_btn.pressed.connect(_on_gacha_pressed)

	bottom_bar_container.call_deferred("add_child", gacha_btn)
	print("âœ… Gacha button added")


func _on_gacha_pressed():
	"""ê°€ì±  í™”ë©´ìœ¼ë¡œ ì´ë™"""
	print("[HomeImproved] Gacha button pressed")
	var scene_path = "res://scenes/screens/GachaScreen.tscn"
	if ResourceLoader.exists(scene_path):
		get_tree().change_scene_to_file(scene_path)
	else:
		_show_notification("ê°€ì±  í™”ë©´ ì¤€ë¹„ ì¤‘", Color(1, 0.8, 0.3, 1))


func _add_tactics_button():
	"""ì „ìˆ  ë²„íŠ¼ ì¶”ê°€"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for tactics button")
		return

	var tactics_btn = Button.new()
	tactics_btn.text = "âš½ ì „ìˆ "
	tactics_btn.custom_minimum_size = Vector2(100, 60)
	tactics_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	tactics_btn.pressed.connect(_on_tactics_pressed)

	bottom_bar_container.call_deferred("add_child", tactics_btn)
	print("âœ… Tactics button added")


func _on_tactics_pressed():
	"""ì „ìˆ  í™”ë©´ìœ¼ë¡œ ì´ë™"""
	print("[HomeImproved] Tactics button pressed")
	var scene_path = "res://scenes/screens/TacticsScreen.tscn"
	if ResourceLoader.exists(scene_path):
		get_tree().change_scene_to_file(scene_path)
	else:
		_show_notification("ì „ìˆ  í™”ë©´ ì¤€ë¹„ ì¤‘", Color(1, 0.8, 0.3, 1))


func _add_settings_button():
	"""ì„¤ì • ë²„íŠ¼ ì¶”ê°€ (ì™¼ìª½ í•˜ë‹¨)"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for settings button")
		return

	var settings_btn = Button.new()
	settings_btn.text = "âš™ï¸ ì„¤ì •"
	settings_btn.custom_minimum_size = Vector2(100, 60)
	settings_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	settings_btn.pressed.connect(_on_settings_pressed)

	# ë§¨ ì•ì— ì¶”ê°€
	bottom_bar_container.call_deferred("add_child", settings_btn)
	bottom_bar_container.call_deferred("move_child", settings_btn, 0)

	print("âœ… Settings button added")


func _on_settings_pressed():
	"""ì„¤ì • ë²„íŠ¼ ì²˜ë¦¬ - íŒì—… ë©”ë‰´ í‘œì‹œ"""
	print("[HomeImproved] Settings button pressed")

	# ì„¤ì • íŒì—… ë©”ë‰´
	var popup = PopupMenu.new()
	popup.add_item("ğŸ’¾ ì €ì¥", 0)
	popup.add_item("ğŸ”Š ë³¼ë¥¨ ì„¤ì •", 1)
	popup.add_separator()
	popup.add_item("âŒ ë‹«ê¸°", 2)

	# ì‹ í˜¸ ì—°ê²°
	popup.id_pressed.connect(_on_settings_menu_selected)

	# í™”ë©´ì— ì¶”ê°€ ë° í‘œì‹œ
	add_child(popup)
	popup.popup_centered(Vector2(300, 200))


func _on_settings_menu_selected(id: int):
	"""ì„¤ì • ë©”ë‰´ í•­ëª© ì„ íƒ ì²˜ë¦¬"""
	match id:
		0:  # ì €ì¥
			_on_save_pressed()
		1:  # ë³¼ë¥¨ ì„¤ì •
			_show_notification("ğŸ”Š ë³¼ë¥¨ ì„¤ì • (ì¤€ë¹„ ì¤‘)", Color(0.7, 0.7, 1, 1))
		2:  # ë‹«ê¸°
			pass


func _add_hall_of_fame_button():
	"""ëª…ì˜ˆì˜ ì „ë‹¹ ë²„íŠ¼ ì¶”ê°€"""
	if not bottom_bar_container:
		print("[HomeImproved] âŒ BottomBar not found for hall of fame button")
		return

	var hof_btn = Button.new()
	hof_btn.text = "ğŸ… ëª…ì˜ˆì˜ ì „ë‹¹"
	hof_btn.custom_minimum_size = Vector2(120, 60)
	hof_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	hof_btn.pressed.connect(_on_hall_of_fame_pressed)

	bottom_bar_container.call_deferred("add_child", hof_btn)
	print("âœ… Hall of Fame button added")


func _on_hall_of_fame_pressed():
	"""ëª…ì˜ˆì˜ ì „ë‹¹ í™”ë©´ìœ¼ë¡œ ì´ë™"""
	print("[HomeImproved] Hall of Fame button pressed")
	var scene_path = "res://scenes/ui/HallOfFameScreen.tscn"
	if ResourceLoader.exists(scene_path):
		get_tree().change_scene_to_file(scene_path)
	else:
		_show_notification("ëª…ì˜ˆì˜ ì „ë‹¹ í™”ë©´ ì¤€ë¹„ ì¤‘", Color(1, 0.8, 0.3, 1))


func _add_new_buttons():
	"""MyTeamê³¼ ë©€í‹°í”Œë ˆì´ì–´ ë²„íŠ¼ ë™ì  ì¶”ê°€"""
	print("[HomeImproved] Adding MyTeam and Multiplayer buttons...")

	# BottomBar/ButtonContainerë¥¼ ì°¾ê¸°
	var button_container = bottom_bar_container
	if not button_container:
		# ëŒ€ì•ˆ: ScrollContainer ë‚´ë¶€ì— ì¶”ê°€
		button_container = quick_actions_container

	if button_container:
		# MyTeam ë²„íŠ¼ ìƒì„±
		var myteam_btn = Button.new()
		myteam_btn.text = "ğŸ† My Team"
		myteam_btn.custom_minimum_size = Vector2(100, 60)
		myteam_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		myteam_btn.pressed.connect(_on_myteam_pressed)
		button_container.call_deferred("add_child", myteam_btn)
		print("âœ… MyTeam button added")

		# ë©€í‹°í”Œë ˆì´ì–´ ë²„íŠ¼ ìƒì„± (ë¹„í™œì„±í™”)
		var multi_btn = Button.new()
		multi_btn.text = "ğŸŒ Multiplayer"
		multi_btn.custom_minimum_size = Vector2(100, 60)
		multi_btn.size_flags_horizontal = Control.SIZE_EXPAND_FILL
		multi_btn.disabled = true
		multi_btn.modulate.a = 0.5
		multi_btn.tooltip_text = "Coming Soon!"
		multi_btn.pressed.connect(_on_multiplayer_pressed)
		button_container.call_deferred("add_child", multi_btn)
		print("âœ… Multiplayer button added (disabled)")
	else:
		print("âŒ Could not find button container for new buttons")


func _update_ui():
	# í”Œë ˆì´ì–´ ì •ë³´ ì—…ë°ì´íŠ¸
	if player_name_label:
		if PlayerData:
			player_name_label.text = PlayerData.get_player_name()
		else:
			player_name_label.text = "í”Œë ˆì´ì–´ ì´ë¦„"
		print("Player name updated")
	else:
		print("Warning: player_name_label is null")

	if week_info_label:
		if GameManager:
			week_info_label.text = "%dí•™ë…„ %dì£¼ì°¨" % [GameManager.current_year, GameManager.current_week]
		else:
			week_info_label.text = "1í•™ë…„ 1ì£¼ì°¨"
		print("Week info updated")
	else:
		print("Warning: week_info_label is null")

	# ê°œì¸í™œë™ ë²„íŠ¼ ê°€ì‹œì„± ì œì–´
	_update_personal_activity_buttons()

	# ì§„í–‰ ë²„íŠ¼ ìƒíƒœ ì œì–´
	_update_progress_button()


func _update_personal_activity_buttons():
	"""ê°œì¸í™œë™ ë²„íŠ¼ í‘œì‹œ/ìˆ¨ê¹€ ì œì–´"""
	var can_do_activity = GameManager and GameManager.can_do_personal_activity()

	# ê°œì¸í™œë™ ë²„íŠ¼ë“¤ ì°¾ê¸° (ì´ë¯¸ @onreadyë¡œ ì„ ì–¸ë¨)
	# var training_btn = ...
	# var rest_btn = ...
	# var go_out_btn = ...

	# ê°€ì‹œì„± ì„¤ì •
	if training_button:
		training_button.visible = can_do_activity
	if rest_button:
		rest_button.visible = can_do_activity
	if go_out_button:
		go_out_button.visible = can_do_activity

	print("[HomeImproved] Personal activity buttons visible: ", can_do_activity)


func _update_progress_button():
	"""ì§„í–‰ ë²„íŠ¼ í™œì„±í™”/ë¹„í™œì„±í™” ì œì–´"""
	if not advance_button:
		return

	var can_progress = GameManager and GameManager.can_progress_week()

	advance_button.disabled = not can_progress

	if can_progress:
		advance_button.text = "â–¶ ì§„í–‰"
		advance_button.modulate = Color(1, 1, 1, 1)
	else:
		advance_button.text = "ğŸ”’ ê°œì¸í™œë™ í•„ìš”"
		advance_button.modulate = Color(0.6, 0.6, 0.6, 1)

	print("[HomeImproved] Progress button enabled: ", can_progress)


func _initialize_quickbar():
	"""QuickBar ì´ˆê¸°í™” ë° ì‹ í˜¸ ì—°ê²°"""
	if has_node("QuickBar"):
		quickbar = %QuickBar
		if quickbar:
			print("[HomeImproved] QuickBar found, connecting signals...")
			# ì‹ í˜¸ ì—°ê²°
			quickbar.skip.connect(_on_quickbar_skip)
			quickbar.toggle_auto.connect(_on_quickbar_auto_toggled)
			quickbar.change_speed.connect(_on_quickbar_speed_changed)
			quickbar.change_highlight.connect(_on_quickbar_highlight_changed)
			quickbar.open_log.connect(_on_quickbar_log_opened)

			# ê¸°ë³¸ ì„¤ì • ì ìš©
			var quickbar_vm = {"autoEnabled": false, "currentSpeed": 1, "highlightLevel": 2, "visible": true}
			quickbar.apply_view_model(quickbar_vm)
		else:
			pass  # QuickBar node found but not valid
	# else:
	# QuickBar ì—†ìŒ (ì •ìƒ - ì¼ë¶€ ì”¬ì—ì„œëŠ” í•„ìš” ì—†ìŒ)


func _initialize_event_dialogue():
	"""EventDialogueScreen ì´ˆê¸°í™”"""
	# Load event dialogue scene
	var event_scene_path = "res://scenes/screens/EventDialogueScreen.tscn"
	if ResourceLoader.exists(event_scene_path):
		var event_scene = load(event_scene_path)
		if event_scene:
			event_dialogue_screen = event_scene.instantiate()
			add_child(event_dialogue_screen)
			event_dialogue_screen.dialogue_closed.connect(_on_event_dialogue_closed)
			print("[HomeImproved] âœ… EventDialogueScreen initialized")
		else:
			print("[HomeImproved] âš ï¸ Failed to load EventDialogueScreen")
	else:
		print("[HomeImproved] âš ï¸ EventDialogueScreen scene not found")


func _on_event_dialogue_closed():
	"""ì´ë²¤íŠ¸ ë‹¤ì´ì–¼ë¡œê·¸ ì¢…ë£Œ ì‹œ í˜¸ì¶œ"""
	print("[HomeImproved] Event dialogue closed")
	# UI ì—…ë°ì´íŠ¸
	_update_ui()


func _initialize_activity_feedback():
	"""ActivityVisualFeedback ì´ˆê¸°í™”"""
	var feedback_scene_path = "res://scenes/ui/ActivityVisualFeedback.tscn"
	if ResourceLoader.exists(feedback_scene_path):
		var feedback_scene = load(feedback_scene_path)
		if feedback_scene:
			activity_feedback = feedback_scene.instantiate()
			add_child(activity_feedback)
			activity_feedback.feedback_completed.connect(_on_activity_feedback_completed)
			print("[HomeImproved] âœ… ActivityVisualFeedback initialized")
		else:
			print("[HomeImproved] âš ï¸ Failed to load ActivityVisualFeedback")
	else:
		print("[HomeImproved] âš ï¸ ActivityVisualFeedback scene not found")


func _on_activity_feedback_completed():
	"""í™œë™ í”¼ë“œë°± ì™„ë£Œ ì‹œ í˜¸ì¶œ"""
	print("[HomeImproved] Activity feedback completed")
	# UI ì—…ë°ì´íŠ¸
	_update_ui()


# QuickBar ì‹ í˜¸ í•¸ë“¤ëŸ¬ë“¤
func _on_quickbar_skip():
	"""QuickBar Skip ë²„íŠ¼ ì²˜ë¦¬"""
	print("[HomeImproved] QuickBar Skip pressed")
	# ë¹ ë¥¸ ì§„í–‰ (ì£¼ì°¨ ì§„í–‰)
	_on_advance_pressed()


func _on_quickbar_auto_toggled(enabled: bool):
	"""QuickBar Auto í† ê¸€ ì²˜ë¦¬"""
	print("[HomeImproved] QuickBar Auto toggled: ", enabled)
	# Auto ëª¨ë“œ í™œì„±í™”/ë¹„í™œì„±í™” ì²˜ë¦¬
	# ì¶”í›„ ìë™ ì§„í–‰ ë¡œì§ êµ¬í˜„


func _on_quickbar_speed_changed(speed: int):
	"""QuickBar ì†ë„ ë³€ê²½ ì²˜ë¦¬"""
	print("[HomeImproved] QuickBar Speed changed to: ", speed)
	# ê²Œì„ ì†ë„ ì¡°ì ˆ ì²˜ë¦¬
	# ì¶”í›„ ì• ë‹ˆë©”ì´ì…˜ ì†ë„ ì¡°ì ˆ êµ¬í˜„


func _on_quickbar_highlight_changed(level: int):
	"""QuickBar í•˜ì´ë¼ì´íŠ¸ ë ˆë²¨ ë³€ê²½ ì²˜ë¦¬"""
	print("[HomeImproved] QuickBar Highlight level changed to: ", level)
	# í•˜ì´ë¼ì´íŠ¸ ë ˆë²¨ ì²˜ë¦¬
	# ì¶”í›„ ì´ë²¤íŠ¸ í‘œì‹œ ìˆ˜ì¤€ ì¡°ì ˆ êµ¬í˜„


func _on_quickbar_log_opened():
	"""QuickBar Log ë²„íŠ¼ ì²˜ë¦¬"""
	print("[HomeImproved] QuickBar Log opened")
	# ë¡œê·¸ ì°½ ì—´ê¸°
	# ì¶”í›„ ì´ë²¤íŠ¸ ë¡œê·¸ ì‹œìŠ¤í…œ êµ¬í˜„


# íŒ€í›ˆë ¨ ë²„íŠ¼ ì œê±°ë¨ - ì§„í–‰ ë²„íŠ¼ì—ì„œ ìë™ ì‹¤í–‰ë¨
# func _on_team_training_pressed():
# 	(ì‚¬ìš©ì ìš”ì²­ì— ë”°ë¼ ì œê±°ë¨)


func _on_training_pressed():
	print("[HomeImproved] Training button pressed")

	# ì£¼ê°„ í™œë™ ê°€ëŠ¥ ì²´í¬
	if GameManager and not GameManager.can_do_personal_activity():
		_show_notification("âš ï¸ ì´ë²ˆ ì£¼ ê°œì¸í™œë™ì€ ì´ë¯¸ ì™„ë£Œí–ˆìŠµë‹ˆë‹¤", Color(1, 0.5, 0, 1))
		return

	# ì”¬ íŒŒì¼ ì¡´ì¬ í™•ì¸ - TrainingManager ì—°ë™ ìƒˆ í™”ë©´
	var scene_path = "res://scenes/screens/TrainingScreen.tscn"
	if ResourceLoader.exists(scene_path):
		print("Scene file exists: ", scene_path)
		# ê°œì¸í›ˆë ¨ í™œë™ í‘œì‹œ
		if GameManager:
			GameManager.mark_personal_activity("training")
		var result = get_tree().change_scene_to_file(scene_path)
		if result == OK:
			print("Scene change successful")
		else:
			print("ERROR: Scene change failed with code: ", result)
	else:
		print("ERROR: Scene file not found: ", scene_path)


func _on_go_out_pressed():
	print("[HomeImproved] Go out button pressed (Refactored)")
	# The UI's only responsibility is to request the action from the manager.
	# The manager will emit go_out_activity_completed signal on completion.
	TrainingManager.perform_go_out_activity()


func _on_go_out_activity_completed(result: Dictionary):
	"""Handles the result of the go out activity from the TrainingManager."""
	print("[HomeImproved] Go out activity completed signal received.")

	if not result.get("success", false):
		# If the manager determined the action couldn't be performed, show its message.
		_show_notification("âš ï¸ %s" % result.get("message", "ì™¸ì¶œì„ í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤."), Color(1, 0.5, 0, 1))
		_update_ui()
		return

	# Format the success message from the result payload
	var message = "%s\n\n" % result.get("message", "ì™¸ì¶œ ì™„ë£Œ!")
	message += "í”¼ë¡œë„: %.1f â†’ %.1f (%.1f íšŒë³µ)\n" % [result.fatigue_before, result.fatigue_after, result.fatigue_recovered]
	message += "ì»¨ë””ì…˜: %d â†’ %d" % [result.condition_before, result.condition_after]

	# Use the dedicated visual feedback system to show the result.
	if activity_feedback:
		activity_feedback.show_activity_feedback("go_out", "ğŸ® ì™¸ì¶œ", message)
	else:
		# Fallback if the visual feedback system isn't available
		_show_notification(message, Color(1.0, 0.7, 0.8))
		_update_ui()

	print("[HomeImproved] Player went out, activity completed via TrainingManager")


func _show_progress_popup(title: String, message: String, icon: String = "âš½"):
	"""ì§„í–‰ ì¤‘ íŒì—… í‘œì‹œ (ë‚˜ì¤‘ì— ì¼ëŸ¬ìŠ¤íŠ¸/ì• ë‹ˆë©”ì´ì…˜ ì¶”ê°€ ê°€ëŠ¥)"""
	var popup = AcceptDialog.new()
	popup.title = title
	popup.dialog_text = "\n\n" + icon + "\n\n" + message + "\n\n"

	# ë„‰ë„‰í•œ í¬ê¸° ì„¤ì • (ë‚˜ì¤‘ì— ì¼ëŸ¬ìŠ¤íŠ¸/ì• ë‹ˆë©”ì´ì…˜ ê³µê°„ í™•ë³´)
	popup.min_size = Vector2(500, 400)

	# íŒì—…ì„ í™”ë©´ì— ì¶”ê°€
	add_child(popup)

	# ì¤‘ì•™ì— í‘œì‹œ
	popup.popup_centered()

	# 1.5ì´ˆ í›„ ìë™ìœ¼ë¡œ ë‹«ê¸°
	await get_tree().create_timer(1.5).timeout
	popup.queue_free()

	print("[HomeImproved] Progress popup shown: %s" % title)


func _on_advance_pressed():
	print("[HomeImproved] Advance button pressed (Refactored)")
	# The GameManager now handles the core logic for advancing the week,
	# including team training. We await its completion.
	await GameManager.advance_week()

	# After the week is advanced, check for events.
	# This should eventually be moved into the GameManager's flow as well.
	await _check_for_events()

	# If no scene transition was triggered by signals (e.g., from team training),
	# ensure the UI is updated for the new week.
	if get_tree().current_scene == self:
		_update_ui()


func _on_team_training_executed(result: Dictionary):
	"""Handles the result of team training and transitions to the result screen."""
	print("[HomeImproved] Team training executed, transitioning to result screen.")

	var scene_path = "res://scenes/ResultScreenImproved.tscn"
	if ResourceLoader.exists(scene_path):
		get_tree().change_scene_to_file(scene_path)
	else:
		print("[HomeImproved] âš ï¸ Result screen not found - UI will just update.")
		_update_ui()


func _on_rest_pressed():
	print("[HomeImproved] Rest button pressed (Refactored)")
	# The UI's only responsibility is to request the action from the manager.
	# The manager is now async and will emit a signal on completion.
	# A visual feedback will be shown by the completion handler.
	TrainingManager.perform_rest_activity()


func _on_rest_activity_completed(result: Dictionary):
	"""Handles the result of the rest activity from the TrainingManager."""
	print("[HomeImproved] Rest activity completed signal received.")

	if not result.get("success", false):
		# If the manager determined the action couldn't be performed, show its message.
		# This is a fallback, as the button should ideally be disabled.
		_show_notification("âš ï¸ %s" % result.get("message", "íœ´ì‹ì„ ì·¨í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤."), Color(1, 0.5, 0, 1))
		_update_ui()  # Ensure UI is refreshed even on failure
		return

	# Format the success message from the result payload
	var message = "%s\n\n" % result.get("message", "íœ´ì‹ ì™„ë£Œ!")
	message += "í”¼ë¡œë„: %.1f â†’ %.1f (%.1f íšŒë³µ)\n" % [result.fatigue_before, result.fatigue_after, result.fatigue_recovered]
	message += "ì»¨ë””ì…˜: %d â†’ %d" % [result.condition_before, result.condition_after]

	# Use the dedicated visual feedback system to show the result.
	# This system will emit its own 'feedback_completed' signal, which triggers a UI update.
	if activity_feedback:
		activity_feedback.show_activity_feedback("rest", "ğŸ˜´ íœ´ì‹", message)
	else:
		# Fallback if the visual feedback system isn't available
		_show_notification(message, Color(0.5, 0.7, 1.0))
		_update_ui()


func _on_status_pressed():
	print("[HomeImproved] Status button pressed")

	# ì”¬ íŒŒì¼ ì¡´ì¬ í™•ì¸
	var scene_path = "res://scenes/StatusScreenImproved.tscn"
	if ResourceLoader.exists(scene_path):
		print("Scene file exists: ", scene_path)
		var result = get_tree().change_scene_to_file(scene_path)
		if result == OK:
			print("Scene change successful")
		else:
			print("ERROR: Scene change failed with code: ", result)
	else:
		print("ERROR: Scene file not found: ", scene_path)


func _on_save_pressed():
	print("[HomeImproved] Save button pressed")

	# ì €ì¥ ê¸°ëŠ¥ (í˜„ì¬ ìŠ¬ë¡¯ì— ì €ì¥)
	if has_node("/root/SaveManager"):
		var save_manager = get_node("/root/SaveManager")
		var current_slot = save_manager.current_save_slot
		print("[HomeImproved] Saving to slot: ", current_slot)

		# ì €ì¥í•  ë°ì´í„° ì¤€ë¹„
		var save_data = {}

		# MyTeamManagerì—ì„œ ìºë¦­í„° ë°ì´í„° ê°€ì ¸ì˜¤ê¸°
		if has_node("/root/MyTeamManager"):
			var team_manager = get_node("/root/MyTeamManager")
			save_data["character_data"] = team_manager.main_character
			save_data["player_name"] = team_manager.main_character.get("basic_info", {}).get("name", "Unknown")

		# TODO: ì¶”ê°€ ë°ì´í„° (ì£¼ì°¨, ë…„ë„ ë“±)
		# save_data["current_year"] = ...
		# save_data["current_week"] = ...
		save_data["save_time"] = Time.get_datetime_string_from_system()

		# ìŠ¬ë¡¯ì— ì €ì¥
		save_manager.save_game(current_slot, save_data)
		print("[HomeImproved] âœ… Game saved to slot: ", current_slot)

		# ì €ì¥ ì™„ë£Œ ë©”ì‹œì§€ í‘œì‹œ
		_show_save_notification()
	else:
		print("[HomeImproved] âš ï¸ SaveManager not found")


func _show_save_notification():
	"""ì €ì¥ ì™„ë£Œ ì•Œë¦¼ í‘œì‹œ"""
	_show_notification("âœ… ì €ì¥ ì™„ë£Œ!", Color(0, 1, 0, 1))


func _check_for_events() -> void:
	"""
	ì´ë²¤íŠ¸ ì²´í¬ ë° í‘œì‹œ.
	ë¹„ì¦ˆë‹ˆìŠ¤ ë¡œì§(ì´ë²¤íŠ¸ ì²´í¬/íŠ¸ë¦¬ê±°)ì€ GameManager.check_and_trigger_events()ë¡œ ì´ê´€ë¨.
	UIëŠ” ë‹¤ì´ì–¼ë¡œê·¸ ëŒ€ê¸°ë§Œ ì²˜ë¦¬.
	"""
	if not GameManager:
		return

	# GameManagerê°€ ì´ë²¤íŠ¸ë¥¼ ì²´í¬í•˜ê³  íŠ¸ë¦¬ê±°
	var triggered_events = GameManager.check_and_trigger_events()

	# UI: ê° íŠ¸ë¦¬ê±°ëœ ì´ë²¤íŠ¸ì— ëŒ€í•´ ë‹¤ì´ì–¼ë¡œê·¸ê°€ ë‹«í ë•Œê¹Œì§€ ëŒ€ê¸°
	for event in triggered_events:
		if is_instance_valid(event_dialogue_screen) and event_dialogue_screen.has_signal("dialogue_closed"):
			await event_dialogue_screen.dialogue_closed


func _show_notification(text: String, color: Color = Color(1, 1, 1, 1)):
	"""ë²”ìš© ì•Œë¦¼ í‘œì‹œ"""
	var notif_label = Label.new()
	notif_label.text = text
	notif_label.add_theme_font_size_override("font_size", 24)
	notif_label.position = Vector2(get_viewport().size.x / 2 - 100, 100)
	notif_label.modulate = color
	add_child(notif_label)

	# 2ì´ˆ í›„ ì‚¬ë¼ì§€ê¸°
	var tween = get_tree().create_tween()
	tween.tween_interval(1.0)
	tween.tween_property(notif_label, "modulate:a", 0.0, 1.0)
	tween.tween_callback(notif_label.queue_free)


# Load ê¸°ëŠ¥ì€ í˜„ì¬ SaveManagerê°€ ì—†ìœ¼ë¯€ë¡œ ì œê±°


func _on_myteam_pressed():
	"""MyTeam ë²„íŠ¼ ì²˜ë¦¬"""
	print("[HomeImproved] MyTeam button pressed")

	# MyTeamManager ìƒíƒœ í™•ì¸
	if has_node("/root/MyTeamManager"):
		var myteam = get_node("/root/MyTeamManager")
		myteam.debug_print_team_status()

		# íŒì—…ìœ¼ë¡œ íŒ€ ì •ë³´ í‘œì‹œ
		var popup = AcceptDialog.new()
		var team_info = "ğŸ† %s\n\n" % myteam.team_name
		team_info += "ğŸ“Š í˜„í™©:\n"
		team_info += "â€¢ 1êµ°: %d/%dëª…\n" % [myteam.first_team.size(), myteam.MAX_FIRST_TEAM]
		team_info += "â€¢ ë¦¬ì €ë¸Œ: %d/%dëª…\n" % [myteam.reserves.size(), myteam.MAX_RESERVES]
		team_info += "\nğŸ’¼ ì½”ì¹­ ìŠ¤íƒœí”„:\n"
		team_info += "â€¢ ê°ë…: %s\n" % (myteam.current_deck.manager.name if myteam.current_deck.manager else "ì—†ìŒ")
		team_info += "â€¢ ë± ë³´ë„ˆìŠ¤: x%.2f\n" % myteam.get_deck_bonus()
		team_info += "\nğŸ“ˆ ì „ì :\n"
		team_info += (
			"%dì „ %dìŠ¹ %dë¬´ %díŒ¨"
			% [myteam.total_matches_played, myteam.total_wins, myteam.total_draws, myteam.total_losses]
		)

		popup.dialog_text = team_info
		popup.title = "My Team"
		add_child(popup)
		popup.popup_centered(Vector2(400, 500))
	else:
		print("âŒ MyTeamManager not found!")
		_show_notification("âš ï¸ MyTeam ì‹œìŠ¤í…œ ì´ˆê¸°í™” ì¤‘...", Color(1, 0.5, 0, 1))


func _on_history_pressed():
	"""Phase 10: History ë²„íŠ¼ ì²˜ë¦¬"""
	print("[HomeImproved] History button pressed")

	# HistoryScreenìœ¼ë¡œ ì´ë™
	var scene_path = "res://scenes/ui/HistoryScreen.tscn"
	if ResourceLoader.exists(scene_path):
		print("Scene file exists: ", scene_path)
		var result = get_tree().change_scene_to_file(scene_path)
		if result == OK:
			print("Scene change successful")
		else:
			print("ERROR: Scene change failed with code: ", result)
	else:
		print("ERROR: Scene file not found: ", scene_path)
		_show_notification("âš ï¸ ê¸°ë¡ í™”ë©´ì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤", Color(1, 0.5, 0, 1))


func _on_match_history_pressed():
	"""Match History ë²„íŠ¼ ì²˜ë¦¬"""
	print("[HomeImproved] Match History button pressed")

	# MatchHistoryScreenìœ¼ë¡œ ì´ë™
	var scene_path = "res://scenes/MatchHistoryScreen.tscn"
	if ResourceLoader.exists(scene_path):
		print("Scene file exists: ", scene_path)
		var result = get_tree().change_scene_to_file(scene_path)
		if result == OK:
			print("Scene change successful")
		else:
			print("ERROR: Scene change failed with code: ", result)
	else:
		print("ERROR: Scene file not found: ", scene_path)
		_show_notification("âš ï¸ ê²½ê¸° ê¸°ë¡ í™”ë©´ì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤", Color(1, 0.5, 0, 1))


func _on_multiplayer_pressed():
	"""ë©€í‹°í”Œë ˆì´ì–´ ë²„íŠ¼ ì²˜ë¦¬ (ë¹„í™œì„±í™” ìƒíƒœ)"""
	print("[HomeImproved] Multiplayer button pressed")

	# Coming Soon íŒì—…
	var popup = AcceptDialog.new()
	popup.dialog_text = """ğŸŒ ë©€í‹°í”Œë ˆì´ì–´ ëª¨ë“œ

ê³µê°œ ì˜ˆì •!

ğŸ“… ì˜ˆì •ëœ ê¸°ëŠ¥:
â€¢ MyTeam ë¦¬ê·¸ - PvP ë¹„ë™ê¸° ëŒ€ì „
â€¢ ì‹±ê¸€ ë¦¬ê·¸ - NPC íŒ€ê³¼ ê²½ìŸ
â€¢ 1ëŒ€1 ëª¨ë“œ - í•˜í”„ì½”íŠ¸ ì‹¤ì‹œê°„

ğŸ† ì‹œì¦Œì œ ìš´ì˜
â€¢ ì›”ê°„ ì‹œì¦Œ ë³´ìƒ
â€¢ ë­í‚¹ ì‹œìŠ¤í…œ
â€¢ íŠ¹ë³„ ì´ë²¤íŠ¸

ì¡°ê¸ˆë§Œ ê¸°ë‹¤ë ¤ ì£¼ì„¸ìš”!"""

	popup.title = "Multiplayer - Coming Soon!"
	add_child(popup)
	popup.popup_centered(Vector2(400, 400))
